fixed out of bounds window movement and temp fix for highlightable window

--- a/OS/OS-Styling/mainOS.css
+++ b/OS/OS-Styling/mainOS.css
@@ -23,6 +23,7 @@
 .taskbar{
     
     height: 50px;
+    user-select: none; 
 
 }
 .taskbar:hover{
